tickets.css fixed white gap below hero image

--- a/src/css/tickets.css
+++ b/src/css/tickets.css
@@ -35,6 +35,7 @@
   object-fit: cover;
   width: 100%;
   height: 30em;
+  vertical-align: middle;
 }
 
 .tickets-image-container-text {
